--- a/.github/workflows/cicd_deployement.yml
+++ b/.github/workflows/cicd_deployement.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Deploy to AWS CloudFormation
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
-        name: krvspk-stack
+        name: karuna-stack
         template: https://my-weather-data-bucket-1.s3.amazonaws.com/DeployConfig.yaml
         no-fail-on-empty-changeset: "1"
         capabilities: CAPABILITY_NAMED_IAM
